# iliad_llama

./: 01_local_data_small_file.py  02_use_existing_index_file.py  03_website_data.py  04_local_data_update_index.py  05_input_data_query.py  05_input_data_query_from_string.py  README.md  index.py  pyproject.toml
data/: cv_1_index.json  cv_2_index.json  cv_3_index.json  index.json
data/cv1/: cv1.md
data/cv2/: cv2.md
data/cv3/: cv3.md
questions/: question1.txt
